fix(docs): visually align version select and github-buttons

--- a/docs/_static/main.css
+++ b/docs/_static/main.css
@@ -160,17 +160,25 @@ body[data-theme="auto"] .only-dark-line {
 }
 
 .version-select {
-    font-size: .75em;
-    border-radius: 4px;
     cursor: pointer;
     background-color: #fff;
-    color: #000000;
     background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
-    border-color: var(--color-background-border);
-    margin-left: 1em;
-    height: 1.7em;
-    width: 6rem;
-    line-height: 1.8em;
+    min-width: 6rem;
     outline: none;
     text-align: center;
+
+    /*
+        To visually align with github-buttons, set the same style according to github-buttons.
+    */
+    padding: 0 0 1px 1px;
+    font-size: 11px;
+    font-weight: 600;
+    height: 20px;
+    line-height: 14px;
+    border: 1px solid;
+    border-radius: .25em;
+    color: #24292f;
+    background-color: #ebf0f4;
+    border-color: #ccd1d5;
+    border-color: rgba(27,31,36,.15);
 }
